Fixed some issues with db

--- a/ProjectScheduler/appsettings.Development.json
+++ b/ProjectScheduler/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=:memory:;Version=3;New=True;"
+        "DefaultConnection": "Data Source=C:\\sqlite\\test.db;"
     },
     "Logging": {
         "LogLevel": {
